# opengl-projet-lila-salome

./: CMakeLists.txt  README.md  README_PROJET.md
src/: 3D_tools.c  3D_tools.h  bonus.cpp  collisions.cpp  draw_scene.h  main.cpp  menus.cpp  obstacles.cpp  setup.cpp
